# BeautyWeather

./: README.md  build.gradle  config.gradle  settings.gradle
app/: app.txt  build.gradle
app/src/androidTest/java/com/crazyorange/beauty/weather/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml
baselibrary/: build.gradle
baselibrary/src/main/: AndroidManifest.xml
comm-config/: CMakeLists.txt  build.gradle
comm-config/src/main/cpp/: config.cpp
comm-config/src/main/java/com/crazyorange/beauty/comm/config/: API.java  RoutePage.java  SignConfig.java
comm-network/: build.gradle
comm-network/src/main/: AndroidManifest.xml
comm-permission/: build.gradle  readme.txt
comm-permission/src/main/: AndroidManifest.xml
database-user/: build.gradle
database-user/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
login-register/: build.gradle
login-register/src/main/: AndroidManifest.xml
login-register/src/main/debug/: AndroidManifest.xml
login-register/src/main/res/drawable/: login_bg_login_btn.xml  login_bg_login_layout.xml  weather_launcher.xml
login-register/src/main/res/layout/: activity_login.xml  activity_register.xml
login-register/src/main/res/values/: colors.xml  strings.xml  styles.xml
weather/: build.gradle
weather/src/main/: AndroidManifest.xml
weather/src/main/debug/: AndroidManifest.xml
weather/src/main/res/layout/: weather_main_activity.xml  weather_main_card_layout.xml
weather/src/main/res/values/: colors.xml  strings.xml  styles.xml
(+58 files in other folders)
